--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="./index.js"></script>
+    <!-- <script defer src="./index.js"></script> -->
+    <script defer src="./index2.js"></script>
     <link rel="stylesheet" href="./style.css">
     <title>XML Converter</title>
 </head>
@@ -14,7 +15,7 @@
     <div class="container">
         <form>
             <textarea name="bible" placeholder="paste here"></textarea>
-            <input type="text" name="cnumber" placeholder="Type Chapter #">
+            <!-- <input type="text" name="cnumber" placeholder="Type Chapter #"> -->
             <button type="submit">Convert</button>
         </form>
         <textarea id="ans"></textarea>
