--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <script defer src="./index.js"></script> -->
-    <script defer src="./index2.js"></script>
+    <!-- <script defer src="./index.js"></script> this is the previous version -->
+    <!-- <script defer src="./index2.js"></script> this is the current version -->
+    <script defer src="./late.js"></script> <!-- This is just for LATE -->
     <link rel="stylesheet" href="./style.css">
     <title>XML Converter</title>
 </head>
