add more bible books

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- <script defer src="./index.js"></script> this is the previous version -->
     <!-- <script defer src="./index2.js"></script> -->
     <!--<script defer src="./late.js"></script>  This is just for LATE -->
+    <!-- <script defer src="./lateTDM.js"></script> -->
     <script defer src="./main.js"></script>
     <link rel="stylesheet" href="./style.css">
     <title>XML Converter</title>
