--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- <script defer src="./index2.js"></script> -->
     <!--<script defer src="./late.js"></script>  This is just for LATE -->
     <!-- <script defer src="./lateTDM.js"></script> -->
-    <script defer src="./main.js"></script>
+    <script defer src="./main2.js"></script>
     <link rel="stylesheet" href="./style.css">
     <title>XML Converter</title>
 </head>
